# final-project

./: Final project presentation.pptx  README.md
RSICV-VP/mulcore/platform/: CMakeLists.txt  mc_main.cpp
RSICV-VP/mulcore/sw/: Makefile  main  main_printf.c
RSICV-VP/singlecore/platform/: decoder.h  filter_def .h  main.cpp
RSICV-VP/singlecore/sw/: Makefile  main  main.cpp
hls/: readme.md
hls/version1/: SobelFilter.cpp  SobelFilter.h  System.cpp  System.h  Testbench.cpp  main.cpp
hls/version1/stratus/: project.tcl
hls/version3/: SobelFilter.h  Testbench.h  filter_def.h
hls/version3/stratus/: project.tcl
hls/vesrsion2/: SobelFilter.cpp
hls/vesrsion2/stratus/: project.tcl
